# rustmix

./: .gitignore  Cargo.toml  LICENSE  kalosm.txt
files/log/: log4rs.yaml
interfaces/kalosm/: Cargo.toml  README.md
interfaces/kalosm-common/: Cargo.toml
interfaces/kalosm-common/src/: cache.rs  kv_cache.rs  lib.rs  mask.rs
interfaces/kalosm-language/: Cargo.toml  README.md
interfaces/kalosm-language/src/: chat.rs  lib.rs  task.rs  vector_db.rs
interfaces/kalosm-language/src/context/: document.rs  mod.rs  rss.rs
interfaces/kalosm-language/src/context/io/: docx.rs  html.rs  md.rs  mod.rs  pdf.rs  txt.rs
interfaces/kalosm-language/src/context/page/: browse.rs  crawl.rs  mod.rs  node.rs  page.rs
interfaces/kalosm-language/src/context/search/: mod.rs
interfaces/kalosm-language/src/search/: mod.rs
interfaces/kalosm-language/src/search/postprocessing/: mod.rs
interfaces/kalosm-language/src/search/preprocessing/: chunking.rs  html.rs  hypothetical.rs  mod.rs  semantic.rs  summary.rs
interfaces/kalosm-language/src/search/preprocessing/sentence/: mod.rs
interfaces/kalosm-language/src/search/preprocessing/sentence/assets/: segment.srx
interfaces/kalosm-language/src/tool/: calculator.rs  mod.rs  search.rs
interfaces/kalosm-learning/: Cargo.toml
interfaces/kalosm-learning-macro/: Cargo.toml
interfaces/kalosm-learning/examples/: classify.rs
interfaces/kalosm-learning/src/: lib.rs
interfaces/kalosm-learning/src/classifier/: mod.rs  model.rs  text_classifier.rs
interfaces/kalosm-parse-macro/: Cargo.toml
interfaces/kalosm-parse-macro/src/: lib.rs
interfaces/kalosm-parse-macro/tests/: enum.rs  struct.rs  unit.rs
interfaces/kalosm-sample/: Cargo.toml
interfaces/kalosm-sample/benches/: parse.rs
interfaces/kalosm-sample/src/: lib.rs  llm.rs
interfaces/kalosm-sample/src/structured_parser/: arc_linked_list.rs  float.rs  has_parser.rs  integer.rs  literal.rs  map.rs  mod.rs  or.rs  parse.rs  regex.rs  repeat.rs  schema.rs  sentence.rs  separated.rs  stop_on.rs  string.rs  then.rs  word.rs
interfaces/kalosm-sound/: Cargo.toml  README.md
interfaces/kalosm-sound/examples/: denoise.rs  denoise_file.rs  transcribe.rs  voice_activity_detection.rs
interfaces/kalosm-sound/src/: audio.rs  lib.rs  mic.rs
interfaces/kalosm-sound/src/source/: mic.rs  mod.rs
interfaces/kalosm-sound/src/transform/: denoise.rs  mod.rs  transcribe.rs  voice_audio_detector.rs  voice_audio_detector_ext.rs
interfaces/kalosm-streams/: Cargo.toml
interfaces/kalosm-vision/: Cargo.toml  README.md
interfaces/kalosm/docs/: language.md  sound.md  vision.md
interfaces/kalosm/examples/: axum.rs  chat-constrained.rs  chat-mistral-2.rs  chat-tiny-llama.rs  chat-with-character.rs  chat.rs  chunking.rs  constrained-regex.rs  constrained-rust-types.rs  constrained.rs  crawl.rs  evaluation.rs  generate-image.rs  generate-text.rs  generate_text.rs  live-qa.rs  llama.rs  mistral.rs  mutate.rs  ocr.rs  phi-3.rs  phi-chat.rs  phi.rs  prompt-annealing.rs  rag.rs  remote-open-ai-compatable.rs  remote.rs  resume-chat.rs  segment-image.rs  self-chat.rs  semantic-chunk.rs  semantic-search.rs  task.rs  tools.rs  transcribe.rs
interfaces/kalosm/src/: evaluate.rs  lib.rs  prompt_annealing.rs
interfaces/kalosm/src/surrealdb_integration/: document_table.rs  mod.rs
interfaces/kalosm/src/tools/: document.rs
interfaces/language-model/: Cargo.toml
interfaces/language-model/docs/: embedding.md  model.md
interfaces/language-model/src/: embedding.rs  lib.rs  model.rs  structured.rs  token_stream.rs
interfaces/language-model/src/embedding/: cache.rs  into_embedding.rs  mod.rs  model.rs
interfaces/language-model/src/local/: download.rs  mod.rs  session.rs
interfaces/language-model/src/remote/: mod.rs  open_ai.rs
lib/: Cargo.toml
lib/src/: lib.rs  numeric.rs
models/kalosm-llama/: Cargo.toml
models/kalosm-llama/benches/: inferance.rs
models/kalosm-llama/examples/: bench.rs  infer.rs  structured.rs  sync.rs
models/kalosm-llama/src/: language_model.rs  lib.rs  model.rs  session.rs  source.rs
models/kalosm-llama/src/raw/: attention_layer.rs  cache.rs  mask.rs  mod.rs  rope.rs  silu.rs
models/kalosm-ocr/: Cargo.toml
models/rbert/: Cargo.toml
models/rphi/: Cargo.toml
models/rwhisper/: Cargo.toml
models/rwhisper/examples/: audio_file.rs  cancelation.rs  transcribe.rs
models/rwhisper/src/: lib.rs  model.rs  source.rs
models/rwuerstchen/: Cargo.toml
models/rwuerstchen/examples/: generate.rs
models/rwuerstchen/src/: lib.rs  model.rs
models/segment-anything-rs/: Cargo.toml
models/segment-anything-rs/examples/: segment-anything.rs  segment-everything.rs
models/segment-anything-rs/src/: lib.rs
rustmix/: Cargo.toml
rustmix/src/: app.rs  date.rs  error.rs  input.rs  lib.rs  log4rs.rs  python.rs  random.rs  slog.rs  sound.rs  string.rs  vision.rs
rustmix/src/ai/: mod.rs  sound.rs
rustmix/src/audio/: mod.rs  openai.rs  rwhisper.rs
rustmix/src/imaging/: image.rs
rustmix/src/io/: directory.rs  file.rs  mod.rs  path.rs
rustmix/src/language/: bot.rs  chat.rs  llama.rs  llma.rs  mod.rs  openai.rs
rustmix/src/log/: log4rs.rs  mod.rs  slog.rs
rustmix/src/mail/: tempmail.rs
rustmix/src/random/: address.rs  automotive.rs  barcode.rs  business.rs  color.rs  datetime.rs  filesystem.rs  internet.rs  lorem.rs  mod.rs  person.rs
rustmix/src/sound/: audio.rs  mod.rs
rustmix/src/threading/: cond.rs  consumer.rs  injector_consumer.rs  mod.rs  parallel_consumer.rs  producer_consumer.rs  spinner.rs
rustmix/src/vision/: image.rs  mod.rs
rustmix/src/vpn/: expressvpn.rs  mod.rs
rustmix/src/web/: http.rs  hyper.rs  mod.rs  reqwest.rs
rustmix/src/web/mail/: mailer.rs  tempmail.rs
src/: app_info.rs  date.rs  error.rs  lib.rs  main.rs  python.rs  string.rs
src/ai/: mod.rs  vision.rs  whisper.rs
src/io/: directory.rs  file.rs  mod.rs  path.rs
src/logging/: log4rs.rs  mod.rs  slog.rs
src/mail/: emailfake.rs  mailer.rs  mod.rs  secmail.rs  tempmail.rs
src/python/: mod.rs
testapp/: Cargo.toml
testapp/src/: main.rs
testapp/src/tests/: audio.rs  io.rs
(+68 files in other folders)
