[package]
name = "testapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0"
rand = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0", features = ["auto-initialize", "abi3"] }
tokio = { version = "1", features = ["full"] }
image = "0"
dotenv = "0"
rustmix = { workspace = true, version = "0", features = ["full"] }

[workspace]
members = [
    "rustmix",
    "models/rbert",
    "models/kalosm-llama",
    "models/rphi",
    "models/rwhisper",
    "models/rwuerstchen",
    "models/segment-anything-rs",
    "models/kalosm-ocr",
    "interfaces/kalosm",
    "interfaces/kalosm-common",
    "interfaces/kalosm-language",
    "interfaces/language-model",
    "interfaces/kalosm-sample",
    "interfaces/kalosm-vision",
    "interfaces/kalosm-sound",
    "interfaces/kalosm-streams",
    "interfaces/kalosm-learning",
    "interfaces/kalosm-learning-macro",
]

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
candle-datasets = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
kalosm = { path = "./interfaces/kalosm", version = "0" }
kalosm-sample = { path = "./interfaces/kalosm-sample", version = "0" }
kalosm-common = { path = "./interfaces/kalosm-common", version = "0" }
kalosm-language-model = { path = "./interfaces/language-model", version = "0" }
kalosm-streams = { path = "./interfaces/kalosm-streams", version = "0" }
kalosm-language = { path = "./interfaces/kalosm-language", version = "0" }
kalosm-sound = { path = "./interfaces/kalosm-sound", version = "0" }
kalosm-vision = { path = "./interfaces/kalosm-vision", version = "0" }
kalosm-learning = { path = "./interfaces/kalosm-learning", version = "0" }
kalosm-learning-macro = { path = "./interfaces/kalosm-learning-macro", version = "0" }
rphi = { path = "./models/rphi", version = "0" }
rbert = { path = "./models/rbert", version = "0" }
kalosm-llama = { path = "./models/kalosm-llama", version = "0" }
rwhisper = { path = "./models/rwhisper", version = "0" }
rwuerstchen = { path = "./models/rwuerstchen", version = "0" }
segment-anything-rs = { path = "./models/segment-anything-rs", version = "0" }
kalosm-ocr = { path = "./models/kalosm-ocr", version = "0" }
rustmix = { path = "./rustmix", version = "0" }
llm-samplers = "=0.0.7"

[patch.crates-io]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-core = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-rsx = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-html = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-hooks = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
