[package]
name = "testapp"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustmix = { workspace = true, features = ["full", "cuda"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[workspace]
members = ["rustmix"]

[workspace.dependencies]
rustmix = { path = "./rustmix" }
parking_lot = "0"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
chrono = "0"
dotenv = "0"
humantime = "2"
image = "0.24.9"
lazy_static = "1"
log = "0"
rand = "0"
