# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rustmix"
version = "0.1.0"
edition = "2021"
description = "rustmix is a Rust library that has some basic utility functions and components."
authors = ["asm <asm2025@outlook.com>"]
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0"
crossbeam = { version = "0", optional = true }
csv = "1"
dotenv = "0"
fake = { version = "2", features = ["derive", "uuid", "always-true-rng", "random_color", "chrono", "time", "http", "geo"] }
file-rotate = { version = "0", optional = true }
futures = "0"
html-entities = { version = "0", optional = true }
image = { version = "0", optional = true }
kalosm = { version = "0", workspace = true, default-features = false, optional = true }
lettre = { version = "0", optional = true }
log = "0"
log4rs = { version = "1", optional = true }
num_cpus = "1"
once_cell = { version = "1", optional = true }
pyo3 = { version = "0", features = ["auto-initialize", "abi3"], optional = true }
rand = "0"
rayon = { version = "1", optional = true }
regex = { version = "1", optional = true }
reqwest = { version = "0", features = ["blocking", "cookies", "json", "gzip", "deflate", "multipart", "socks", "stream"] }
rodio = { version = "0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2", optional = true }
slog-async = { version = "2", optional = true }
slog-json = { version = "2", optional = true }
slog-scope = { version = "4", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }
time = "0"
fake-useragent = "0"
fake_user_agent = "0"
url = { version = "2", features = ["serde"] }
urlencoding = "2"

[features]
default = ["mail", "threading", "log-log4rs"]
full = ["mail", "threading", "log-log4rs", "log-slog", "python", "audio", "vision"]
llamacpp = ["kalosm?/llamacpp"]
metal = ["kalosm?/metal"]
cublas = ["kalosm?/cublas"]
mkl = ["kalosm?/mkl"]
# language = ["kalosm/language"]
audio = ["kalosm/sound", "dep:rodio"]
vision = ["kalosm/vision", "dep:image"]
log-log4rs = ["dep:log4rs"]
log-slog = ["dep:slog", "dep:slog-async", "dep:slog-scope", "dep:slog-stdlog", "dep:slog-term", "dep:slog-json", "dep:file-rotate"]
mail = ["dep:html-entities", "dep:lettre", "dep:once_cell", "dep:regex"]
python = ["dep:pyo3"]
threading = ["dep:crossbeam", "dep:rayon"]

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features" 
