# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rustmix"
version = "0.2.0"
edition = "2021"
description = "rustmix is a Rust library that has some basic utility functions and components."
authors = ["asm <asm2025@outlook.com>"]
license = "MIT"

[dependencies]
chrono = "0"
crossbeam = { version = "0", optional = true }
csv = "1"
dirs = "5"
dotenv = "0"
execute = "0"
fake = { version = "2", features = [
    "derive",
    "uuid",
    "always-true-rng",
    "random_color",
    "chrono",
    "time",
    "http",
    "geo",
] }
file-rotate = { version = "0", optional = true }
futures = "0"
html-entities = { version = "0", optional = true }
http-body-util = "0"
image = { version = "0", optional = true }
indicatif = "0"
kalosm = { workspace = true, optional = true }
lazy_static = "1"
lettre = { version = "0", optional = true }
log = "0"
log4rs = { version = "1", optional = true }
num_cpus = "1"
once_cell = { version = "1", optional = true }
pyo3 = { version = "0", features = [
    "auto-initialize",
    "abi3",
], optional = true }
rand = "0"
randua = "0"
rayon = { version = "1", optional = true }
regex = "1"
reqwest = { version = "0", features = [
    "blocking",
    "cookies",
    "json",
    "gzip",
    "deflate",
    "multipart",
    "socks",
    "stream",
] }
rodio = { version = "0", optional = true }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2", optional = true }
slog-async = { version = "2", optional = true }
slog-json = { version = "2", optional = true }
slog-scope = { version = "4", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2", optional = true }
termion = "4"
thiserror = "1"
time = "0"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"

[features]
default = ["mail", "threading", "log4rs"]
full = ["mail", "threading", "log4rs", "slog", "python", "audio", "vision"]
metal = ["kalosm?/metal"]
cublas = ["kalosm?/cublas"]
mkl = ["kalosm?/mkl"]
language = ["kalosm/language"]
mail = ["dep:html-entities", "dep:lettre", "dep:once_cell"]
threading = ["dep:crossbeam", "dep:rayon"]
log4rs = ["dep:log4rs"]
slog = [
    "dep:slog",
    "dep:slog-async",
    "dep:slog-scope",
    "dep:slog-stdlog",
    "dep:slog-term",
    "dep:slog-json",
    "dep:file-rotate",
]
python = ["dep:pyo3"]
audio = ["kalosm/sound", "dep:rodio"]
vision = ["kalosm/vision", "dep:image"]

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo tree --features"
