[package]
name = "testapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rand = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0", features = ["auto-initialize", "abi3"] }
tokio = { version = "1", features = ["full"] }
image = "0"
dotenv = "0"

[workspace]
members = ["rustmix"]

[workspace.dependencies]
rustmix = { path = "../", version = "0" }
