[package]
name = "kalosm-common"
version = "0.3.3"
edition = "2021"
description = "Helpers for kalosm downloads and candle utilities"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
candle-core.workspace = true
candle-nn.workspace = true
hf-hub = { version = "0" }
reqwest = "0"
tokio = { version = "1", features = ["full"] }
dirs = "5"
tracing = "0"
httpdate = "1"
indicatif = "0"
metal = { version = "0", optional = true }
once_cell = "1"

[features]
metal = ["dep:metal"]
