[package]
name = "kalosm-language"
version = "0.2.2"
edition = "2021"
description = "A set of pretrained language models "
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff"]
keywords = ["ai", "llm", "llama", "mistral", "nlp"]

[dependencies]
bytesize = "1"
futures-util = "0"
llm-samplers = { workspace = true }
log = "0"
rand = "0"
reqwest = { version = "0", features = ["stream", "json"] }
spinoff = "0"
tokio = { version = "1", features = ["full"] }
slab = { version = "0", features = ["serde"] }
arroy = "0"
heed = "0"
serde = { version = "1", features = ["derive"] }
partial_sort = "0"
once_cell = "1"
pollster = "0"
url = "2"
anyhow = "1"
tracing = "0"
num_cpus = "1"
async-trait = "0"
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
readability = { version = "0", default_features = false }
tantivy = "0"
tempfile = "3"
rss = { version = "2", features = ["atom"] }
scraper = { version = "0", features = ["atomic"] }
kalosm-language-model = { workspace = true }
headless_chrome = { version = "1" }
candle-core.workspace = true
candle-nn.workspace = true
tokio-util = { version = "0", features = ["rt"] }
crossbeam = "0"
dashmap = "5"
rbert.workspace = true
rphi.workspace = true
kalosm-llama.workspace = true
pin-project = "1"
kalosm-streams.workspace = true
pulldown-cmark = "0"
docx-rs = "0"
pdf = { git = "https://github.com/pdf-rs/pdf" }
pdf_text = { git = "https://github.com/pdf-rs/pdf_text" }
convert_case = "0"
itertools = "0"
async-recursion = "1"
tokenizers = { version = "0" }
rustc-hash = "1"
kalosm-sample = { workspace = true }
ego-tree = "0"
image = "0"
meval = "0"
whatlang = "0"
texting_robots = "0"
half = "2"
zstd = "=0.13.1"

[features]
llamacpp = ["kalosm-language-model/llamacpp", "kalosm-sample/llamacpp"]
metal = ["rphi/metal", "rbert/metal", "kalosm-llama/metal"]
cublas = ["rbert/cuda", "rbert/cudnn", "rphi/cuda", "rphi/cudnn", "kalosm-llama/cuda", "kalosm-llama/cudnn"]
mkl = ["rphi/mkl", "rbert/mkl", "kalosm-llama/mkl"]
