[package]
name = "kalosm-learning"
version = "0.2.1"
edition = "2021"
description = "A simplified machine learning library for building off of pretrained models."
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff"]
keywords = ["ai", "bert", "nlp", "machine-learning", "transformers"]

[dependencies]
kalosm-language-model = { workspace = true }
kalosm-learning-macro = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokio-util = { version = "0", features = ["rt"] }
half = "2"
rand = "0"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
kalosm-common = { workspace = true }

[dev-dependencies]
rbert = { workspace = true }

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
