[package]
name = "kalosm-sample"
version = "0.3.2"
edition = "2021"
description = "A common interface for token sampling and helpers for structered llm sampling "
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff"]
keywords = ["ai", "llm", "llama", "mistral", "nlp"]

[dependencies]
anyhow = "1"
regex-automata = "0"
kalosm-parse-macro = { workspace = true }

[dev-dependencies]
tracing-subscriber = "0"
criterion = "0"
rand = "0"
pretty_assertions = "1"

[[bench]]
name = "parse"
harness = false
