[package]
name = "kalosm-sound"
version = "0.3.4"
edition = "2021"
description = "A set of pretrained audio models "
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff"]
keywords = ["ai", "whisper"]

[dependencies]
anyhow = "1"
cpal = "0"
itertools = "0"
rand = "0"
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
byteorder = "1"
tokenizers = "0"
serde_json = "1"
hound = "3"
rodio = "0"
dasp = { version = "0", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tracing = "0"

futures-core = "0"
futures-util = "0"
futures-channel = "0"
async-trait = "0"

kalosm-streams.workspace = true
rwhisper.workspace = true

voice_activity_detector = { version = "0", features = ["async"], optional = true }
ort = { version = "=2.0.0-rc.5", optional = true }
nnnoiseless = { version = "0", optional = true }

[features]
default = ["voice_detection", "denoise"]
metal = ["candle-core/metal", "rwhisper/accelerate", "rwhisper/metal"]
cuda = ["candle-core/cuda", "rwhisper/cuda", "rwhisper/cudnn"]
mkl = ["candle-core/mkl", "rwhisper/mkl"]
denoise = ["dep:nnnoiseless"]
voice_detection = ["dep:voice_activity_detector", "dep:ort"]

[dev-dependencies]
kalosm = { workspace = true, features = ["sound"] }
