[package]
name = "kalosm"
edition = "2021"
version = "0.2.2"
authors = ["Evan Almloff"]
description = "A simple interface for pretrained AI models "
keywords = ["llm", "llama", "whisper", "ocr", "nlp"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

[dependencies]
anyhow = "1"
async-trait = "0"
comfy-table = "7"
futures-util = "0"
hdrhistogram = "7"
image = "0"
num-traits = "0"
once_cell = "1"
rand = "0"

[dependencies.kalosm-common]
path = "../kalosm-common"
features = []

[dependencies.kalosm-language]
features = []
optional = true
workspace = true

[dependencies.kalosm-sound]
features = []
optional = true
workspace = true

[dependencies.kalosm-streams]
features = []
workspace = true

[dependencies.kalosm-vision]
features = []
optional = true
workspace = true

[dependencies.llm-samplers]
features = []
workspace = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.surrealdb]
version = "1"
features = ["kv-rocksdb"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full", "macros", "rt-multi-thread"]

[dependencies.tracing]
version = "0"
features = ["std"]
default-features = false

[dev-dependencies]
axum = "0"
ego-tree = "0"
scraper = "0"
tokenizers = "0.15.2"
tracing-subscriber = "0"

[dev-dependencies.candle-core]
features = []
workspace = true

[dev-dependencies.candle-datasets]
features = []
workspace = true

[dev-dependencies.candle-nn]
features = []
workspace = true

[dev-dependencies.candle-transformers]
features = []
workspace = true

[dev-dependencies.kalosm]
features = ["sound", "language", "vision", "remote"]
workspace = true

[features]
cublas = ["kalosm-language/cublas"]
mkl = ["kalosm-language/mkl", "kalosm-vision/mkl", "kalosm-sound/mkl"]
language = ["kalosm-language"]
metal = ["kalosm-language/metal", "kalosm-vision/metal", "kalosm-sound/metal"]
sound = ["kalosm-sound"]
surrealdb = ["dep:surrealdb"]
vision = ["kalosm-vision"]
remote = ["kalosm-language?/remote"]
