[package]
name = "kalosm"
edition = "2021"
version = "0.3.2"
authors = ["Evan Almloff"]
description = "A simple interface for pretrained AI models "
keywords = ["llm", "llama", "whisper", "ocr", "nlp"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

[dependencies]
anyhow = "1"
async-trait = "0"
comfy-table = "7"
futures-util = "0"
hdrhistogram = "7"
image = "0"
num-traits = "0"
once_cell = "1"
rand = "0"

[dependencies.kalosm-common]
path = "../kalosm-common"
features = []

[dependencies.kalosm-language]
features = []
optional = true
workspace = true

[dependencies.kalosm-sound]
features = []
optional = true
workspace = true

[dependencies.kalosm-streams]
features = []
workspace = true

[dependencies.kalosm-vision]
features = []
optional = true
workspace = true

[dependencies.llm-samplers]
features = []
workspace = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.surrealdb]
version = "1"
features = ["kv-rocksdb"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full", "macros", "rt-multi-thread"]

[dependencies.tracing]
version = "0"
features = ["std"]
default-features = false

[dev-dependencies]
axum = "0"
scraper = "0"
tokenizers = "0"
tracing-subscriber = "0"

[dev-dependencies.candle-core]
features = []
workspace = true

[dev-dependencies.candle-datasets]
features = []
workspace = true

[dev-dependencies.candle-nn]
features = []
workspace = true

[dev-dependencies.candle-transformers]
features = []
workspace = true

[dev-dependencies.kalosm]
features = ["sound", "language", "vision", "remote", "surrealdb"]
workspace = true

[features]
full = ["language", "vision", "sound", "surrealdb"]
cuda = ["kalosm-language?/cublas", "kalosm-vision?/cublas", "kalosm-sound?/cuda"]
mkl = ["kalosm-language?/mkl", "kalosm-vision?/mkl", "kalosm-sound?/mkl"]
language = ["kalosm-language"]
metal = ["kalosm-language?/metal", "kalosm-vision?/metal", "kalosm-sound?/metal", "kalosm-common/metal"]
sound = ["kalosm-sound"]
surrealdb = ["dep:surrealdb"]
vision = ["kalosm-vision"]
remote = ["kalosm-language?/remote"]

[[example]]
name = "axum"
required-features = ["language"]

[[example]]
name = "chat-mistral-2"
required-features = ["language"]

[[example]]
name = "phi-3"
required-features = ["language"]

[[example]]
name = "chat-tiny-llama"
required-features = ["language"]

[[example]]
name = "chat-with-character"
required-features = ["language"]

[[example]]
name = "chat"
required-features = ["language"]

[[example]]
name = "chunking"
required-features = ["language"]

[[example]]
name = "constrained-regex"
required-features = ["language"]

[[example]]
name = "constrained-rust-types"
required-features = ["language"]

[[example]]
name = "constrained"
required-features = ["language"]

[[example]]
name = "crawl"
required-features = ["language"]

[[example]]
name = "evaluation"
required-features = ["language"]

[[example]]
name = "generate-image"
required-features = ["language"]

[[example]]
name = "generate-text"
required-features = ["language"]

[[example]]
name = "live-qa"
required-features = ["language", "sound", "surrealdb"]

[[example]]
name = "llama"
required-features = ["language"]

[[example]]
name = "mistral"
required-features = ["language"]

[[example]]
name = "mutate"
required-features = ["language"]

[[example]]
name = "ocr"
required-features = ["vision"]

[[example]]
name = "prompt-annealing"
required-features = ["language"]

[[example]]
name = "remote-open-ai-compatable"
required-features = ["language"]

[[example]]
name = "remote"
required-features = ["language"]

[[example]]
name = "resume-chat"
required-features = ["language"]

[[example]]
name = "segment-image"
required-features = ["vision"]

[[example]]
name = "self-chat"
required-features = ["language"]

[[example]]
name = "semantic-search"
required-features = ["language", "surrealdb"]

[[example]]
name = "rag"
required-features = ["language", "surrealdb"]

[[example]]
name = "task"
required-features = ["language"]

[[example]]
name = "tools"
required-features = ["language"]

[[example]]
name = "transcribe"
required-features = ["sound"]

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["full"]
